2005-07-21  John McCutchan  <jmc@cvs.gnome.org>

	* python/tests/basic4.py:
	* python/tests/basic6.py:
	* python/tests/multiple2.py:
	* python/tests/noexists.py:
	* python/tests/nokernel.py:
	* python/tests/readonly.py: Cleanup debug output
	* server/gam_inotify.c: (gam_inotify_directory_handler_internal),
	(gam_inotify_read_handler), (gam_inotify_init),
	(gam_inotify_remove_all_for), (gam_inotify_add_watch),
	(gam_inotify_rm_watch):  More inotify backend cleanups
	* server/local_inotify_syscalls.h: Local header that defines the
	inotify system calls for x86 and x86-64 architectures. Other
	architectures get dummy functions.

Wed Jul 13 18:51:44 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_connection.c: applied patch from Jean-Yves Lefort
	  for compilation on gcc < 3.0

Wed Jul 13 13:15:37 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in doc/* gamin.spec.in NEWS: preparing release of 
	  version 0.1.2

Tue Jul 12 23:19:38 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_inotify.c server/local_inotify.h: the inotify API
	  changed from file based to syscall, patch from John McCutchan
	* server/gam_node.c: one of the assert from Neal seems to be 
	  crashing gam_server when using the gtk+ file selector, fix
	  from John McCutchan too to avoid the assert() but not the cause

Wed Jun 15 19:04:38 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* python/tests/Makefile.am: add make tests to make check target
	  fixes #307786 Neal H. Walfield

Wed Jun 15 14:40:56 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: another cleanup of poll only support from 
	  Neal H. Walfield which should not affect the dnotify back-end,
	  should fix #307745

Wed Jun 15 13:01:11 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c server/gam_channel.c: reverted patch from
	  #306706 as this broke authentication and debugging.
	* server/gam_server.c: removed warnings.
